--- a/blocks/app/app.css
+++ b/blocks/app/app.css
@@ -15,6 +15,6 @@ a{
 	margin:0 auto;
 }
 
-.exercise-info, .exercise-add-form {
+.exercise-info, .exercise-add-form, .training-progress, .exercise-result-form {
     margin-top: 10px;
 }
