Готово заполнение списка введенных/записанных упражнений

--- a/blocks/exerciseAddForm/exerciseAddForm.pug
+++ b/blocks/exerciseAddForm/exerciseAddForm.pug
@@ -5,6 +5,6 @@ form
         textarea(rows="6" cols="50").exercise-add-form__description
     label Ссылка на видео-пример по упражнению(если есть)
         input(type="text").exercise-add-form__video-tutorial-link
-    label Название переменного параметра в тренировке (вес, высота запрыгивания). Пример "Штанга, кг", "Утяжелители для бега, кг"
+    label Название переменного параметра в тренировке (вес, ...). Пример "Штанга, кг", "Утяжелители для бега, кг"
         input(type="text").exercise-add-form__variable-parameter-name
     button.exercise-add-form__add-button Добавить
