--- a/blocks/exerciseInfo/exerciseInfo.pug
+++ b/blocks/exerciseInfo/exerciseInfo.pug
@@ -1,6 +1,6 @@
 table
     tr
-        th Название упражнения
+        th Упражнение
         th Описание
         th Ссылка на видео инструкцию
         th Изменяемый параметр тренировки
@@ -10,4 +10,3 @@ table
             td.exercise-info__description=exercise.description
             td.exercise-info__video-tutorial-link=exercise.videoTutorialLink
             td.exercise-info__variable-parameter-name=exercise.variableParamentrName
-
