Добавлена возможность ввода данных по выполненному подходу

--- a/blocks/trainingProgress/trainingProgress.pug
+++ b/blocks/trainingProgress/trainingProgress.pug
@@ -10,7 +10,7 @@ table
                 td.training-progress__train-set-name=trainSet.exercise.name
                 td.training-progress__train-set-result=trainSet.result
                 td.training-progress__train-set-variable-parameter-value=trainSet.exercise.variableParametrName + ": " 
-                    if trainSet.variableParametrValueResult
-                        span=trainSet.variableParametrValueResult
+                    if trainSet.variableParametrValue
+                        span=trainSet.variableParametrValue
                     else
                         span нет
