--- a/blocks/exerciseInfo/exerciseInfo.pug
+++ b/blocks/exerciseInfo/exerciseInfo.pug
@@ -9,4 +9,4 @@ table
             td.exercise-info__name=exercise.name
             td.exercise-info__description=exercise.description
             td.exercise-info__video-tutorial-link=exercise.videoTutorialLink
-            td.exercise-info__variable-parameter-name=exercise.variableParamentrName
+            td.exercise-info__variable-parameter-name=exercise.variableParametrName
