--- a/blocks/exerciseAddForm/exerciseAddForm.pug
+++ b/blocks/exerciseAddForm/exerciseAddForm.pug
@@ -1,10 +1,13 @@
-form
-    label Название упражнения или развиваемого параметра. Пример "Жим лежа, максимум за подход", "Бег, км за пробежку"
-        input(type="text" required).exercise-add-form__name
-    label Описание
-        textarea(rows="6" cols="50" required).exercise-add-form__description
-    label Ссылка на видео-пример по упражнению(если есть)
-        input(type="text").exercise-add-form__video-tutorial-link
-    label Название переменного параметра в тренировке (вес, ...). Пример "Штанга, кг", "Утяжелители для бега, кг"
-        input(type="text").exercise-add-form__variable-parameter-name
-    button.exercise-add-form__add-button Добавить
+if active
+    form
+        label Название упражнения или развиваемого параметра. Пример "Жим лежа, максимум за подход", "Бег, км за пробежку"
+            input(type="text" required).exercise-add-form__name
+        label Описание
+            textarea(rows="6" cols="50" required).exercise-add-form__description
+        label Ссылка на видео-пример по упражнению(если есть)
+            input(type="text").exercise-add-form__video-tutorial-link
+        label Название переменного параметра в тренировке (вес, ...). Пример "Штанга, кг", "Утяжелители для бега, кг"
+            input(type="text").exercise-add-form__variable-parameter-name
+        button.exercise-add-form__add-button Добавить
+else
+    button.exercise-add-form__toggle Добавить новое упражнение
