--- a/blocks/exerciseAddForm/exerciseAddForm.pug
+++ b/blocks/exerciseAddForm/exerciseAddForm.pug
@@ -1,5 +1,4 @@
-if active
-    form
+form(hidden=!active)
         label Название упражнения или развиваемого параметра. Пример "Жим лежа, максимум за подход", "Бег, км за пробежку"
             input(type="text" required).exercise-add-form__name
         label Описание
@@ -9,5 +8,4 @@ if active
         label Название переменного параметра в тренировке (вес, ...). Пример "Штанга, кг", "Утяжелители для бега, кг"
             input(type="text").exercise-add-form__variable-parameter-name
         button.exercise-add-form__add-button Добавить
-else
-    button.exercise-add-form__toggle Добавить новое упражнение
+input(type="submit" hidden=!active value="Добавить новое упражнение").exercise-add-form__toggle
