Fixed events on toggle btn - added close-form-button - Headers for forms in pug - any other fixes

--- a/blocks/exerciseAddForm/exerciseAddForm.css
+++ b/blocks/exerciseAddForm/exerciseAddForm.css
@@ -3,3 +3,10 @@
     border-radius: 5px;
     padding: 20px;
 }
+
+.close-form-button {
+    position: relative;
+    top: -60px;
+    right: -710px;
+    height: 0px;
+}
