--- a/blocks/exerciseInfo/exerciseInfo.pug
+++ b/blocks/exerciseInfo/exerciseInfo.pug
@@ -1,3 +1,5 @@
+div.panel-head
+    h3 Мои упражнения
 table
     tr
         th Упражнение
@@ -10,4 +12,4 @@ table
             td.exercise-info__description=exercise.description
             td.exercise-info__video-tutorial-link
                 a(href=exercise.videoTutorialLink)=exercise.videoTutorialLink
-            td.exercise-info__variable-parameter-name=exercise.variableParametrName
+            td.exercise-info__variable-parameter-name=exercise.variableParameterName
