--- a/blocks/exerciseResultForm/exerciseResultForm.pug
+++ b/blocks/exerciseResultForm/exerciseResultForm.pug
@@ -1,3 +1,5 @@
+div.panel-head
+    h3 Ввод результатов текущей тренировки
 form
     label Упражнение
         select(required).training-progress-form__exercise
